force-app/main/default/staticresources/python/Disappear/src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Acronym__c</fullName>
        <label>Acronym</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyCreatedBy__c</fullName>
        <label>Legacy Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyCreatedDate__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyLastModifiedBy__c</fullName>
        <label>Legacy Last Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyLastModifiedDate__c</fullName>
        <label>Legacy Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SponsorDept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sponsor Dept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amgen Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Acronym__c</columns>
        <columns>Type__c</columns>
        <columns>OrganizationId__c</columns>
        <columns>URL__c</columns>
        <columns>SponsorDept__c</columns>
        <columns>isLogicallyDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>